# TaskPilot

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py  settings.py
app/auth/: auth_dependencies.py  auth_handlers.py  auth_service.py  jwt.py
app/auth/client/: google.py  vk.py  yandex.py
app/database/: database.py  dependencies.py  session.py
app/database/models/: __init__.py  enums.py  todo_category.py  todo_item.py  user.py
app/handlers/: admin_todo_items.py  todo_item.py  user.py
app/migrations/: env.py
app/migrations/versions/: 197a51317610_is_active.py  3ecb51fc5539_init.py  6f2bb977c7b2_init_user.py  7b0b1abfaa6d_создал_директорию_models.py  7e2ecc759831_false.py
app/repositories/: todo_item.py  user.py
app/schema/: todo_item.py  user.py
app/service/: email.py  todo_item.py  user.py
tests/: README.md  __init__.py  conftest.py  test_admin.py  test_auth.py  test_todo_items.py  test_users.py  test_utils.py
